src/parser.output
Terminals which are not used

   FOR


Rules never reduced

   60 FUNCTION_STATEMENT_LIST: RETURN_STATEMENT


State 13 conflicts: 1 shift/reduce
State 29 conflicts: 2 shift/reduce
State 37 conflicts: 2 shift/reduce
State 53 conflicts: 1 reduce/reduce
State 121 conflicts: 2 shift/reduce
State 122 conflicts: 2 shift/reduce
State 131 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 CONSTANT: FLOAT_VALUE
    2         | STRING
    3         | CHAR_VALUE
    4         | INT_VALUE

    5 PRIMARY_EXPRESSION: CONSTANT
    6                   | IDENTIFIER
    7                   | FUNCTION_CALL
    8                   | OPEN_PAR EXPRESSION CLOSE_PAR

    9 FUNCTION_ARG_LIST: POINTER IDENTIFIER
   10                  | EXPRESSION
   11                  | EXPRESSION COMMA FUNCTION_ARG_LIST

   12 FUNCTION_CALL: IDENTIFIER OPEN_PAR FUNCTION_ARG_LIST CLOSE_PAR
   13              | IDENTIFIER OPEN_PAR CLOSE_PAR

   14 UNARY_EXPRESSION: PRIMARY_EXPRESSION
   15                 | PLUS UNARY_EXPRESSION
   16                 | MINUS UNARY_EXPRESSION

   17 MULTIPLICATIVE_EXPRESSION: UNARY_EXPRESSION
   18                          | MULTIPLICATIVE_EXPRESSION MULTIPLY UNARY_EXPRESSION
   19                          | MULTIPLICATIVE_EXPRESSION DIVIDE UNARY_EXPRESSION

   20 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   21                    | ADDITIVE_EXPRESSION PLUS ADDITIVE_EXPRESSION
   22                    | ADDITIVE_EXPRESSION MINUS ADDITIVE_EXPRESSION

   23 COMPARISON_EXPRESSION: ADDITIVE_EXPRESSION
   24                      | ADDITIVE_EXPRESSION LEFT_TRI ADDITIVE_EXPRESSION
   25                      | ADDITIVE_EXPRESSION LESS_THAN_EQUALS ADDITIVE_EXPRESSION
   26                      | ADDITIVE_EXPRESSION RIGHT_TRI ADDITIVE_EXPRESSION
   27                      | ADDITIVE_EXPRESSION GREATER_THAN_EQUALS ADDITIVE_EXPRESSION

   28 EXPRESSION: COMPARISON_EXPRESSION
   29           | COMPARISON_EXPRESSION EQUALS COMPARISON_EXPRESSION
   30           | COMPARISON_EXPRESSION NOT_EQUALS COMPARISON_EXPRESSION

   31 ASSIGNMENT_STATEMENT: IDENTIFIER ASSIGNMENT EXPRESSION SEMI_COLON
   32                     | TYPE IDENTIFIER ASSIGNMENT EXPRESSION SEMI_COLON

   33 IF_STATEMENT: IF OPEN_PAR EXPRESSION CLOSE_PAR STATEMENT
   34             | IF OPEN_PAR EXPRESSION CLOSE_PAR STATEMENT ELSE STATEMENT

   35 WHILE_STATMENT: WHILE OPEN_PAR EXPRESSION CLOSE_PAR STATEMENT

   36 RETURN_STATEMENT: RETURN SEMI_COLON
   37                 | RETURN EXPRESSION SEMI_COLON

   38 STATEMENT_LIST: /* empty */
   39               | STATEMENT STATEMENT_LIST

   40 BLOCK_STATEMENT: OPEN_BRACKET STATEMENT_LIST CLOSE_BRACKET

   41 EMPTY_STATEMENT: SEMI_COLON

   42 STATEMENT: ASSIGNMENT_STATEMENT
   43          | IF_STATEMENT
   44          | WHILE_STATMENT
   45          | RETURN_STATEMENT
   46          | BLOCK_STATEMENT
   47          | EMPTY_STATEMENT
   48          | FUNCTION_CALL

   49 RETURN_TYPE: VOID
   50            | TYPE

   51 FUNCTION_PARAMETER: TYPE IDENTIFIER

   52 FUNCTION_PARAMETER_LIST: FUNCTION_PARAMETER
   53                        | FUNCTION_PARAMETER COMMA FUNCTION_PARAMETER_LIST

   54 VARIABLE_DEFINITION: TYPE IDENTIFIER ASSIGNMENT CONSTANT SEMI_COLON
   55                    | TYPE IDENTIFIER ASSIGNMENT IDENTIFIER
   56                    | FUNCTION_CALL

   57 VARIABLE_DEFINITION_LIST: /* empty */
   58                         | VARIABLE_DEFINITION VARIABLE_DEFINITION_LIST

   59 FUNCTION_STATEMENT_LIST: /* empty */
   60                        | RETURN_STATEMENT
   61                        | STATEMENT FUNCTION_STATEMENT_LIST

   62 FUNCTION_BODY: OPEN_BRACKET VARIABLE_DEFINITION_LIST FUNCTION_STATEMENT_LIST CLOSE_BRACKET

   63 FUNCTION_DEFINITION: RETURN_TYPE IDENTIFIER OPEN_PAR FUNCTION_PARAMETER_LIST CLOSE_PAR FUNCTION_BODY
   64                    | RETURN_TYPE IDENTIFIER OPEN_PAR VOID CLOSE_PAR FUNCTION_BODY

   65 FUNCTION_DEFINITION_LIST: /* empty */
   66                         | FUNCTION_DEFINITION FUNCTION_DEFINITION_LIST

   67 HEADER: HASHTAG INCLUDE LEFT_TRI IDENTIFIER PERIOD IDENTIFIER RIGHT_TRI
   68       | HASHTAG INCLUDE STRING
   69       | HEADER HEADER

   70 PROGRAM: FUNCTION_DEFINITION_LIST
   71        | HEADER FUNCTION_DEFINITION_LIST


Terminals, with rules where they appear

$end (0) 0
error (256)
EQUALS (258) 29
LESS_THAN_EQUALS (259) 25
GREATER_THAN_EQUALS (260) 27
NOT_EQUALS (261) 30
COMMA (262) 11 53
ASSIGNMENT (263) 31 32 54 55
SEMI_COLON (264) 31 32 36 37 41 54
PERIOD (265) 67
POINTER (266) 9
OPEN_BRACKET (267) 40 62
CLOSE_BRACKET (268) 40 62
OPEN_PAR (269) 8 12 13 33 34 35 63 64
CLOSE_PAR (270) 8 12 13 33 34 35 63 64
LEFT_TRI (271) 24 67
RIGHT_TRI (272) 26 67
HASHTAG (273) 67 68
INCLUDE (274) 67 68
RETURN (275) 36 37
VOID (276) 49 64
IF (277) 33 34
ELSE (278) 34
FOR (279)
WHILE (280) 35
PLUS (281) 15 21
MINUS (282) 16 22
MULTIPLY (283) 18
DIVIDE (284) 19
FLOAT_VALUE (285) 1
INT_VALUE (286) 4
CHAR_VALUE (287) 3
IDENTIFIER (288) 6 9 12 13 31 32 51 54 55 63 64 67
TYPE (289) 32 50 51 54 55
STRING (290) 2 68


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
CONSTANT (37)
    on left: 1 2 3 4, on right: 5 54
PRIMARY_EXPRESSION (38)
    on left: 5 6 7 8, on right: 14
FUNCTION_ARG_LIST (39)
    on left: 9 10 11, on right: 11 12
FUNCTION_CALL (40)
    on left: 12 13, on right: 7 48 56
UNARY_EXPRESSION (41)
    on left: 14 15 16, on right: 15 16 17 18 19
MULTIPLICATIVE_EXPRESSION (42)
    on left: 17 18 19, on right: 18 19 20
ADDITIVE_EXPRESSION (43)
    on left: 20 21 22, on right: 21 22 23 24 25 26 27
COMPARISON_EXPRESSION (44)
    on left: 23 24 25 26 27, on right: 28 29 30
EXPRESSION (45)
    on left: 28 29 30, on right: 8 10 11 31 32 33 34 35 37
ASSIGNMENT_STATEMENT (46)
    on left: 31 32, on right: 42
IF_STATEMENT (47)
    on left: 33 34, on right: 43
WHILE_STATMENT (48)
    on left: 35, on right: 44
RETURN_STATEMENT (49)
    on left: 36 37, on right: 45 60
STATEMENT_LIST (50)
    on left: 38 39, on right: 39 40
BLOCK_STATEMENT (51)
    on left: 40, on right: 46
EMPTY_STATEMENT (52)
    on left: 41, on right: 47
STATEMENT (53)
    on left: 42 43 44 45 46 47 48, on right: 33 34 35 39 61
RETURN_TYPE (54)
    on left: 49 50, on right: 63 64
FUNCTION_PARAMETER (55)
    on left: 51, on right: 52 53
FUNCTION_PARAMETER_LIST (56)
    on left: 52 53, on right: 53 63
VARIABLE_DEFINITION (57)
    on left: 54 55 56, on right: 58
VARIABLE_DEFINITION_LIST (58)
    on left: 57 58, on right: 58 62
FUNCTION_STATEMENT_LIST (59)
    on left: 59 60 61, on right: 61 62
FUNCTION_BODY (60)
    on left: 62, on right: 63 64
FUNCTION_DEFINITION (61)
    on left: 63 64, on right: 66
FUNCTION_DEFINITION_LIST (62)
    on left: 65 66, on right: 66 70 71
HEADER (63)
    on left: 67 68 69, on right: 69 71
PROGRAM (64)
    on left: 70 71, on right: 0


state 0

    0 $accept: . PROGRAM $end

    HASHTAG  shift, and go to state 1
    VOID     shift, and go to state 2
    TYPE     shift, and go to state 3

    $default  reduce using rule 65 (FUNCTION_DEFINITION_LIST)

    RETURN_TYPE               go to state 4
    FUNCTION_DEFINITION       go to state 5
    FUNCTION_DEFINITION_LIST  go to state 6
    HEADER                    go to state 7
    PROGRAM                   go to state 8


state 1

   67 HEADER: HASHTAG . INCLUDE LEFT_TRI IDENTIFIER PERIOD IDENTIFIER RIGHT_TRI
   68       | HASHTAG . INCLUDE STRING

    INCLUDE  shift, and go to state 9


state 2

   49 RETURN_TYPE: VOID .

    $default  reduce using rule 49 (RETURN_TYPE)


state 3

   50 RETURN_TYPE: TYPE .

    $default  reduce using rule 50 (RETURN_TYPE)


state 4

   63 FUNCTION_DEFINITION: RETURN_TYPE . IDENTIFIER OPEN_PAR FUNCTION_PARAMETER_LIST CLOSE_PAR FUNCTION_BODY
   64                    | RETURN_TYPE . IDENTIFIER OPEN_PAR VOID CLOSE_PAR FUNCTION_BODY

    IDENTIFIER  shift, and go to state 10


state 5

   66 FUNCTION_DEFINITION_LIST: FUNCTION_DEFINITION . FUNCTION_DEFINITION_LIST

    VOID  shift, and go to state 2
    TYPE  shift, and go to state 3

    $default  reduce using rule 65 (FUNCTION_DEFINITION_LIST)

    RETURN_TYPE               go to state 4
    FUNCTION_DEFINITION       go to state 5
    FUNCTION_DEFINITION_LIST  go to state 11


state 6

   70 PROGRAM: FUNCTION_DEFINITION_LIST .

    $default  reduce using rule 70 (PROGRAM)


state 7

   69 HEADER: HEADER . HEADER
   71 PROGRAM: HEADER . FUNCTION_DEFINITION_LIST

    HASHTAG  shift, and go to state 1
    VOID     shift, and go to state 2
    TYPE     shift, and go to state 3

    $default  reduce using rule 65 (FUNCTION_DEFINITION_LIST)

    RETURN_TYPE               go to state 4
    FUNCTION_DEFINITION       go to state 5
    FUNCTION_DEFINITION_LIST  go to state 12
    HEADER                    go to state 13


state 8

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 14


state 9

   67 HEADER: HASHTAG INCLUDE . LEFT_TRI IDENTIFIER PERIOD IDENTIFIER RIGHT_TRI
   68       | HASHTAG INCLUDE . STRING

    LEFT_TRI  shift, and go to state 15
    STRING    shift, and go to state 16


state 10

   63 FUNCTION_DEFINITION: RETURN_TYPE IDENTIFIER . OPEN_PAR FUNCTION_PARAMETER_LIST CLOSE_PAR FUNCTION_BODY
   64                    | RETURN_TYPE IDENTIFIER . OPEN_PAR VOID CLOSE_PAR FUNCTION_BODY

    OPEN_PAR  shift, and go to state 17


state 11

   66 FUNCTION_DEFINITION_LIST: FUNCTION_DEFINITION FUNCTION_DEFINITION_LIST .

    $default  reduce using rule 66 (FUNCTION_DEFINITION_LIST)


state 12

   71 PROGRAM: HEADER FUNCTION_DEFINITION_LIST .

    $default  reduce using rule 71 (PROGRAM)


state 13

   69 HEADER: HEADER . HEADER
   69       | HEADER HEADER .

    HASHTAG  shift, and go to state 1

    HASHTAG   [reduce using rule 69 (HEADER)]
    $default  reduce using rule 69 (HEADER)

    HEADER  go to state 13


state 14

    0 $accept: PROGRAM $end .

    $default  accept


state 15

   67 HEADER: HASHTAG INCLUDE LEFT_TRI . IDENTIFIER PERIOD IDENTIFIER RIGHT_TRI

    IDENTIFIER  shift, and go to state 18


state 16

   68 HEADER: HASHTAG INCLUDE STRING .

    $default  reduce using rule 68 (HEADER)


state 17

   63 FUNCTION_DEFINITION: RETURN_TYPE IDENTIFIER OPEN_PAR . FUNCTION_PARAMETER_LIST CLOSE_PAR FUNCTION_BODY
   64                    | RETURN_TYPE IDENTIFIER OPEN_PAR . VOID CLOSE_PAR FUNCTION_BODY

    VOID  shift, and go to state 19
    TYPE  shift, and go to state 20

    FUNCTION_PARAMETER       go to state 21
    FUNCTION_PARAMETER_LIST  go to state 22


state 18

   67 HEADER: HASHTAG INCLUDE LEFT_TRI IDENTIFIER . PERIOD IDENTIFIER RIGHT_TRI

    PERIOD  shift, and go to state 23


state 19

   64 FUNCTION_DEFINITION: RETURN_TYPE IDENTIFIER OPEN_PAR VOID . CLOSE_PAR FUNCTION_BODY

    CLOSE_PAR  shift, and go to state 24


state 20

   51 FUNCTION_PARAMETER: TYPE . IDENTIFIER

    IDENTIFIER  shift, and go to state 25


state 21

   52 FUNCTION_PARAMETER_LIST: FUNCTION_PARAMETER .
   53                        | FUNCTION_PARAMETER . COMMA FUNCTION_PARAMETER_LIST

    COMMA  shift, and go to state 26

    $default  reduce using rule 52 (FUNCTION_PARAMETER_LIST)


state 22

   63 FUNCTION_DEFINITION: RETURN_TYPE IDENTIFIER OPEN_PAR FUNCTION_PARAMETER_LIST . CLOSE_PAR FUNCTION_BODY

    CLOSE_PAR  shift, and go to state 27


state 23

   67 HEADER: HASHTAG INCLUDE LEFT_TRI IDENTIFIER PERIOD . IDENTIFIER RIGHT_TRI

    IDENTIFIER  shift, and go to state 28


state 24

   64 FUNCTION_DEFINITION: RETURN_TYPE IDENTIFIER OPEN_PAR VOID CLOSE_PAR . FUNCTION_BODY

    OPEN_BRACKET  shift, and go to state 29

    FUNCTION_BODY  go to state 30


state 25

   51 FUNCTION_PARAMETER: TYPE IDENTIFIER .

    $default  reduce using rule 51 (FUNCTION_PARAMETER)


state 26

   53 FUNCTION_PARAMETER_LIST: FUNCTION_PARAMETER COMMA . FUNCTION_PARAMETER_LIST

    TYPE  shift, and go to state 20

    FUNCTION_PARAMETER       go to state 21
    FUNCTION_PARAMETER_LIST  go to state 31


state 27

   63 FUNCTION_DEFINITION: RETURN_TYPE IDENTIFIER OPEN_PAR FUNCTION_PARAMETER_LIST CLOSE_PAR . FUNCTION_BODY

    OPEN_BRACKET  shift, and go to state 29

    FUNCTION_BODY  go to state 32


state 28

   67 HEADER: HASHTAG INCLUDE LEFT_TRI IDENTIFIER PERIOD IDENTIFIER . RIGHT_TRI

    RIGHT_TRI  shift, and go to state 33


state 29

   62 FUNCTION_BODY: OPEN_BRACKET . VARIABLE_DEFINITION_LIST FUNCTION_STATEMENT_LIST CLOSE_BRACKET

    IDENTIFIER  shift, and go to state 34
    TYPE        shift, and go to state 35

    IDENTIFIER  [reduce using rule 57 (VARIABLE_DEFINITION_LIST)]
    TYPE        [reduce using rule 57 (VARIABLE_DEFINITION_LIST)]
    $default    reduce using rule 57 (VARIABLE_DEFINITION_LIST)

    FUNCTION_CALL             go to state 36
    VARIABLE_DEFINITION       go to state 37
    VARIABLE_DEFINITION_LIST  go to state 38


state 30

   64 FUNCTION_DEFINITION: RETURN_TYPE IDENTIFIER OPEN_PAR VOID CLOSE_PAR FUNCTION_BODY .

    $default  reduce using rule 64 (FUNCTION_DEFINITION)


state 31

   53 FUNCTION_PARAMETER_LIST: FUNCTION_PARAMETER COMMA FUNCTION_PARAMETER_LIST .

    $default  reduce using rule 53 (FUNCTION_PARAMETER_LIST)


state 32

   63 FUNCTION_DEFINITION: RETURN_TYPE IDENTIFIER OPEN_PAR FUNCTION_PARAMETER_LIST CLOSE_PAR FUNCTION_BODY .

    $default  reduce using rule 63 (FUNCTION_DEFINITION)


state 33

   67 HEADER: HASHTAG INCLUDE LEFT_TRI IDENTIFIER PERIOD IDENTIFIER RIGHT_TRI .

    $default  reduce using rule 67 (HEADER)


state 34

   12 FUNCTION_CALL: IDENTIFIER . OPEN_PAR FUNCTION_ARG_LIST CLOSE_PAR
   13              | IDENTIFIER . OPEN_PAR CLOSE_PAR

    OPEN_PAR  shift, and go to state 39


state 35

   54 VARIABLE_DEFINITION: TYPE . IDENTIFIER ASSIGNMENT CONSTANT SEMI_COLON
   55                    | TYPE . IDENTIFIER ASSIGNMENT IDENTIFIER

    IDENTIFIER  shift, and go to state 40


state 36

   56 VARIABLE_DEFINITION: FUNCTION_CALL .

    $default  reduce using rule 56 (VARIABLE_DEFINITION)


state 37

   58 VARIABLE_DEFINITION_LIST: VARIABLE_DEFINITION . VARIABLE_DEFINITION_LIST

    IDENTIFIER  shift, and go to state 34
    TYPE        shift, and go to state 35

    IDENTIFIER  [reduce using rule 57 (VARIABLE_DEFINITION_LIST)]
    TYPE        [reduce using rule 57 (VARIABLE_DEFINITION_LIST)]
    $default    reduce using rule 57 (VARIABLE_DEFINITION_LIST)
